# temporal-workshop-py

./: .gitignore  README.md  main.py  pyproject.toml
docs/: process1.html  process10.html  process11.html  process2-1.html  process2-2.html  process2.html  process3.html  process4.html  process5.html  process6.html  process7.html  process8.html  process9.html  setup-python.html  setup-typescript.html  workshop.css  workshop.js
python/: pyproject.toml
python/tests/: test_case1_order.py  test_case3_promise.py
python/tests/process1/: test_activities.py
python/tests/process10/: test_activities.py  test_integration.py
python/tests/process11/: test_integration.py  test_workflow.py
python/tests/process3/: test_integration.py
python/tests/process4/: test_activities.py  test_integration.py  test_workflow.py
src/temporal_learn/shared/: saga.py
tests/: conftest.py  test_case2_compensation.py  test_case4_update.py  test_process2_versions.py  test_shared_saga.py
tests/process1/: test_activities.py  test_integration.py  test_workflow.py
tests/process10/: test_workflow.py
tests/process11/: test_activities.py
tests/process2/: test_activities.py  test_integration.py  test_workflow.py
tests/process3/: test_activities.py  test_workflow.py
tests/process5/: test_activities.py  test_workflow.py
tests/process6/: test_integration.py  test_workflow.py
tests/process7/: test_activities.py
tests/process9/: test_activities.py  test_integration.py  test_workflow.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/tests/: helpers.ts
(+138 files in other folders)
